# patient_info_srv

./: README.md  app.py  main.py  pyproject.toml  validation.py
entities/: case.py  hospital.py  patient.py
