[tool.poetry]
name = "nkhoma-hospital-srv"
version = "0.1.0"
description = "Data collection and storage service for patient consultations"
authors = ["Advait Joshi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
